--- a/schema/mercode.css
+++ b/schema/mercode.css
@@ -1,8 +1,8 @@
 /**
- * Bluebasic Facebonk
- * Scheme for Hubzilla
- * Version 0.1
- * Maintained by BOET@nexxt.social
+ * MerHub Theme
+ * Scheme for hub.mercode.theme
+ * Version 0.3
+ * Maintained by Yutyo (tan siret akıncı)
 
 
 /* generals */
