--- a/schema/mercode.css
+++ b/schema/mercode.css
@@ -8,8 +8,8 @@
 /* generals */
 
 body {
-    background-color: #e9e9e9;
-    color: #545454;
+  background-color: #545454;
+  color: #e9e9e9;
 }
 
 .navbar-dark .navbar-nav .nav-link, .section-title-wrapper, .usermenu i {
@@ -19,11 +19,13 @@ body {
 
 
 .widget {
-    background-color: rgba(254,254,254,.9);
+    background-color: #545454;
+    color: #ffffff;
  }
 
 .wall-item-content-wrapper {
-    background-color: #ffffff;
+    background-color: #545454;
+    color: #ffffff;
 }
 
 a, .fakelink {
@@ -36,12 +38,13 @@ a, .fakelink {
 }
 
 .section-title-wrapper {
-    color: $font_colour !important;
-    background: #fff;
+    color: #ffffff;
+    background-color: #545454;
+
 }
 
 .section-title-wrapper a {
-        color: $nav_colour !important;
+     color: #ffffff;
 }
 
 .badge {
